--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     --hoverColor: #5745FF;
     --mainWidth: 1290px;
     --ipadWidth: 768px;
+    --androidWidth: 360px;
 }
 html {
     box-sizing: border-box;
@@ -243,6 +244,8 @@ header {
             padding-left: 0;
             text-decoration: none;
         }
+
+        #arr_mob {display: none;}
         
         .eventOff { color: #000000 }
         
@@ -297,7 +300,7 @@ a:active { text-decoration: none; }
 
 .m h2 a { color: var(--mainColor) }
 
-.burg1, #logo_ipad, #burger_menu {
+.burg1, #logo_ipad, #burger_menu, #social_android, #logo_android {
     display: none;
     }
 
@@ -422,7 +425,7 @@ margin-right: 20px;
 
 #sec1 p {
     width: 692px;
-    height: 71px;
+    height: 104px;
     margin: 22px 0 5px 35px;
 }
 
@@ -514,4 +517,165 @@ margin-right: 20px;
         
         /* Menu */
 
+}
+
+@media (max-width: 500px) {
+    
+    body {
+        width: var(--androidWidth);
+        height: 1277px;
+        margin: 0 auto;
+        font-family: Gotham Pro;
+    }
+    
+    #mainContainer {
+        width: var(--androidWidth);
+        height: 1277px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .burg1, #logo_ipad,  #social, #logo, #footer {
+        display: none;
+        }
+
+    #burger_menu {
+        width: var(--androidWidth);
+        height: 48px;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+    
+    #burger_menu img {
+        margin-right: 13px;
+    } 
+
+    header {
+        padding-top: 0; 
+    }
+
+    #title {
+    
+        width: 315px;
+        height: 80px;
+        font-size: 40px;
+        margin-left: 13px;
+        }
+
+         #header {
+            margin: 20px 0 0 13px;
+            width: 330px;
+        }
+
+        #header > a img {
+            width: 246px;
+        }
+
+         #soonEvent > h1 {
+         margin: 60px 0 0 15px;
+         }
+    
+        #sec1 > p {
+            width: 320px;
+            margin: 20px 0 0 13px;
+            }
+
+            #mainMenu {
+                width: 360px;
+                height: 360px;
+                margin: 55px 0 0 0;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: flex-start;
+                align-content: space-between;
+            }
+
+            #mainMenu > div {
+                width: 156px; 
+                height: 165px;
+                margin: 0 0 0 13px; 
+            }
+
+            #mainMenu div div {
+                height: 90px;
+            }
+
+            #arr_mob {
+                display: block;
+            }
+
+            .currentEvent {
+                border: none;
+             }
+
+            #eventMenu {
+                margin: 27px 0 0 15px; 
+            }
+
+            #eventMenu > div {
+                width: 336px; 
+                height: 140px;
+                padding: 0;
+            
+            }
+
+            #eventMenu div p {
+                margin-right: 40px;   
+                }
+                
+                #eventMenu div * {
+                    padding-left: 0;
+                }
+                
+                #social_cont {
+                    width: 330px;
+                    border-top: 1px solid #F3F3F3;
+                    margin: 26px 0 0 15px;
+                }
+
+                #social_android {
+                    padding-top: 24px;
+                    width: 195px;
+                    display: flex;
+                    justify-content: space-between;
+                }
+
+                #logo_android {
+                    display: block;
+                    margin-bottom: 85px;
+                }
+
+                #logo_android img:nth-child(1){
+                    position: relative;
+                    left: -6px;
+                    top: 20px;
+                }
+                #logo_android img:nth-child(2){
+                    position: relative;
+                    top: 10px;
+                    left: 0px;
+                }
+                #logo_android img:nth-child(3){
+                    position: relative;
+                    top: 20px;
+                    left: 20px;
+                }
+
+     /* Menu */
+
+    .burg1 {
+        height: 640px;
+        position: relative;
+        top: -1330px;
+        left: 0px;
+    }
+
+    .msocial {
+        margin: 54px 0 46px 17px;
+    }
+    
+    /* Menu */
 }
