--- a/css/events.css
+++ b/css/events.css
@@ -1,24 +1,26 @@
-button{
+button {
 	border: none;
 }
 
-.title{
+.title {
 	margin-top: 70px;
 	margin-left: 80px;
 }
-.title h1{
-	font-family: 'Gotham Pro' serif;
+
+.title h1 {
+	font-family: 'Gotham Pro'serif;
 	font-size: 40px;
 	font-weight: 700;
 	color: #000000;
 }
-.title img{
+
+.title img {
 	margin-left: 15px;
 	margin-top: 15px;
 	margin-bottom: 15px;
 }
 
-.header{
+.header {
 	background-image: url(../img/page_events/rectangle16.svg);
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -27,25 +29,28 @@ button{
 	max-width: 1020px;
 	height: 520px;
 }
-.header p{
-	font-family: 'Gotham Pro' serif;
+
+.header p {
+	font-family: 'Gotham Pro'serif;
 	font-weight: 400;
 	font-size: 14px;
 	line-height: 20px;
 }
 
-.header__container{
+.header__container {
 	border-radius: 30px;
 	background-color: #FAE31B;
 	width: 330px;
 	height: 100%;
 }
-.header__content{
+
+.header__content {
 	padding-top: 30px;
 	margin-left: 30px;
 	height: 85%;
 }
-.header__date{
+
+.header__date {
 	background-color: #3725E4;
 	color: #ffffff;
 	font-family: 'Gotham Pro';
@@ -56,25 +61,28 @@ button{
 	text-align: center;
 	margin-bottom: 20px;
 	border-radius: 30px;
-	width: 100px;
+	width: 140px;
 	height: 22px;
 }
-.header__cont{
+
+.header__cont {
 	font-size: 14px;
 	max-width: 270px;
 }
-.header__cont h3{
+
+.header__cont h3 {
 	color: #000000;
 	margin-bottom: 20px;
 }
-.header__button{
+
+.header__button {
 	text-align: center;
 }
 
-.button{
+.button {
 	background-color: #3725E4;
 	color: #ffffff;
-	font-family: 'Gotham Pro' serif;
+	font-family: 'Gotham Pro'serif;
 	font-style: normal;
 	font-weight: normal;
 	font-size: 16px;
@@ -88,33 +96,40 @@ button{
 	max-width: 1020px;
 	min-height: 520px;
 }
+
 .events__flex {
 	display: flex;
 }
+
 /* .events__calendar {
 	width: 100%;
 } */
 .events__address {
 	margin-top: 80px;
 }
-.events__content{
+
+.events__content {
 	margin-top: 25px;
 	margin-left: 45px;
 }
-.events__content img{
+
+.events__content img {
 	margin-bottom: 10px;
 }
-.events__addr{
+
+.events__addr {
 	margin-bottom: 25px;
 }
-.events__addr p{
+
+.events__addr p {
 	font-family: 'Georgia';
 	font-style: italic;
 	font-weight: normal;
 	font-size: 16px;
 	line-height: 130%;
 }
-.events__content h2{
+
+.events__content h2 {
 	font-family: 'Gotham Pro';
 	font-style: normal;
 	font-weight: bold;
@@ -122,6 +137,7 @@ button{
 	line-height: 21px;
 	margin-bottom: 10px;
 }
+
 .events__button {
 	margin-left: 40px;
 	margin-bottom: 45px;
@@ -133,6 +149,7 @@ button{
 	/* justify-content: center;
 	align-items: center; */
 }
+
 .btn_left {
 	display: block;
 	background-color: #3725E4;
@@ -144,7 +161,7 @@ button{
 }
 
 .btn_left:hover {
-color: #ffffff
+	color: #ffffff
 }
 
 .btn_right {
@@ -158,85 +175,86 @@ color: #ffffff
 /* карточка */
 
 .card {
-    width: 100%; 
-    padding-left: 35px;
-    padding-right: 100px;
-    margin-bottom: 53px;
-    display: flex;
-    justify-content: space-between;
+	width: 100%;
+	padding-left: 35px;
+	padding-right: 100px;
+	margin-bottom: 53px;
+	display: flex;
+	justify-content: space-between;
+}
 
-  }
-   
-.card > div {
-    /* overflow: hidden; */
-    max-width: 311px;
-    height: 480px;
-    margin-right: 16px;
-    box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.14);
-    border-radius: 22px;
-    /* display: flex;
+.card>div {
+	/* overflow: hidden; */
+	max-width: 311px;
+	height: 480px;
+	margin-right: 16px;
+	box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.14);
+	border-radius: 22px;
+	/* display: flex;
     flex-wrap: wrap;
     align-content: space-between; */
 
-} 
+}
 
 .card_img {
-    width: 100%;
-} 
+	width: 100%;
+}
 
 .card h3 {
-font-style: normal;
-font-weight: bold;
-width: 90%;  
-height: 60px;;  
-font-size: 22px;
-/* font-size: 1.3vw; */
-line-height: 21px;
-position: relative;
-top: -90px;
-left: 24px;
-/* padding-right: 10px; */
-color: #FFFFFF;
-text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+	font-style: normal;
+	font-weight: bold;
+	width: 90%;
+	height: 60px;
+	;
+	font-size: 22px;
+	/* font-size: 1.3vw; */
+	line-height: 21px;
+	position: relative;
+	top: -90px;
+	left: 24px;
+	/* padding-right: 10px; */
+	color: #FFFFFF;
+	text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
 }
 
 .card div div {
-font-style: normal;
-font-weight: normal;
-font-size: 14px;
-line-height: 20px;
-padding: 24px;
-position: relative;
-top: -60px;
-
+	font-style: normal;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 20px;
+	padding: 24px;
+	position: relative;
+	top: -60px;
 }
 
-.hc1 { 
-    position: relative;
-    top: 450px;
-    min-height: 170px;
- }
+.hc1 {
+	position: relative;
+	top: 450px;
+	height: 170px;
+        overflow: auto;
+}
+
 
 .card_arrow {
-    text-align: right;
-    margin-right: 14px;
-    
+	text-align: right;
+	margin-right: 14px;
 }
 
 
-.much_news{
+.much_news {
 	margin: 0px auto;
 	margin-left: 250px;
 	margin-bottom: 131px;
 	width: 375px;
 }
-.much_news__row{
+
+.much_news__row {
 	margin-top: 16px;
 	text-align: center;
 }
 
-.much_news h2{
-	font-family: 'Gotham Pro' serif;
+.much_news h2 {
+	font-family: 'Gotham Pro'serif;
 	font-weight: bold;
 	font-size: 22px;
 	color: #3725E4;
@@ -255,30 +273,39 @@ top: -60px;
 /* карточка */
 
 @media (max-width: 768px) {
-.title{
-	margin-left: 30px;
-}
-.header{
-	margin-left: 10px;
-	max-width: 730px;
-}
-.events__calendar img, #events__address img {
-	width: 98%;
-}
-.events__content p, .events__content h2{
-	font-size: 14px;
-}
-.events__address {
-	margin-top: 50px;
-}
-.events__content{
-	margin-top: 25px;
-	margin-left: 25px;
-}
-.much_news{
-	margin-left: 190px;
-}
-.card h3 {
-	top: -50px;
-}
+	.title {
+		margin-left: 30px;
+	}
+
+	.header {
+		margin-left: 10px;
+		max-width: 730px;
+	}
+
+	.events__calendar img,
+	#events__address img {
+		width: 98%;
+	}
+
+	.events__content p,
+	.events__content h2 {
+		font-size: 14px;
+	}
+
+	.events__address {
+		margin-top: 50px;
+	}
+
+	.events__content {
+		margin-top: 25px;
+		margin-left: 25px;
+	}
+
+	.much_news {
+		margin-left: 190px;
+	}
+
+	.card h3 {
+		top: -50px;
+	}
 }
